# fma-small-audio-pipeline

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
data/: label_map.json  stats.json
src/: __init__.py
src/features/: __init__.py  audio_transforms.py
src/ingestion/: __init__.py  dataset_builder.py  metadata.py  verify.py
src/utils/: __init__.py  helpers.py
tests/: test_pipeline.py
